--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,9 @@
   <version>1.0-SNAPSHOT</version>
   <name>java-project</name>
   <url>http://maven.apache.org</url>
+  <build>
+    <finalName>docker-jenkins-integration-sample</finalName>
+</build>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
