--- a/pom.xml
+++ b/pom.xml
@@ -18,4 +18,41 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+  <build>
+
+  <plugins>
+
+    <plugin>
+
+      <!-- Build an executable JAR -->
+
+      <groupId>org.apache.maven.plugins</groupId>
+
+      <artifactId>maven-jar-plugin</artifactId>
+
+      <version>3.3.9</version>
+
+      <configuration>
+
+        <archive>
+
+          <manifest>
+
+            <addClasspath>true</addClasspath>
+
+            <classpathPrefix>lib/</classpathPrefix>
+
+            <mainClass>com.bharath.App</mainClass>
+
+          </manifest>
+
+        </archive>
+
+      </configuration>
+
+    </plugin>
+
+  </plugins>
+
+</build>
 </project>
